Allow tracking of data and credential folders without including xlsx, csv or json files

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,6 @@ Example Workflows/
 # Folders # 
 datos/
 Datos/
-data/
 Data/
 temp/
 Temp/
@@ -202,4 +201,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 
 # Ignore credentials
-credentials/
+credentials/credentials.json
