--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,6 @@ Example Workflows/
 *.xls
 
 # Folders # 
-datos/
-Datos/
-Data/
 temp/
 Temp/
 temporal/
@@ -193,11 +190,29 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+# vscode
+.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
 
-# Ignore credentials
-credentials/credentials_bq.json
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+# Binary files for reports
+*.pbix
+reports/*.pptx
+
+# Data files
+*.xlsx
+*.csv
+*.gsheet
+
+# Credentials files
+credentials/*.json
