--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-google-auth==2.9.0
-pandas==1.5.1
-pandas-gbq==0.17.6
-numpy==1.23.2
-scikit-learn==1.1.2
-psycopg2==2.9.3
-matplotlib==3.5.2
-seaborn==0.11.2
-openpyxl==3.0.10
-ipykernel==6.17.1
-mysql-connector-python==8.0.30
+# python -m venv venv
+#
+# Linux -  Mac systems
+#     source venv/bin/activate
+# Windows system using git bash or WSL:
+#     source venv/Scripts/activate
+#
+# pip install --no-cache-dir -r requirements.txt
+
+cookiecutter==2.1.1
