Absolute path search no longer depends on file depth. Now you can find folders and files. The pertinent adjustments are made in the sample notebook, requriments.txt and load_data.py module

--- a/{{ cookiecutter.project_slug }}/requirements.txt
+++ b/{{ cookiecutter.project_slug }}/requirements.txt
@@ -7,6 +7,7 @@
 #
 # pip install --no-cache-dir -r requirements.txt
 
+pyprojroot==0.2.0
 ipykernel==6.17.0
 matplotlib==3.6.0
 {% if cookiecutter.project_packages == "All" -%}
